--- a/MyCV.html
+++ b/MyCV.html
@@ -18,16 +18,12 @@
                 <td>Java/.Net</td>
                 <td>Eclipse</td>
                 <td>MySQL/SQL</td>
-            </tr>
-        </table>
-        <table>
+            </tr>       
             <tr>
                 <td>JavaScript</td>
                 <td>Visual Studio Code</td>
                 <td>Git/GitHub</td>
-            </tr>
-        </table>
-        <table>
+            </tr>       
             <tr>
                 <td>HTML/CSS/Bootstrap</td>
                 <td>Spring/JPA</td>
@@ -50,7 +46,7 @@
         <p>Accounting Assistant || Kiswel Inc || 04.19-4.20 </p>
         <ul>
             <li>Reviewed and recorded account payable invoices for payment into ERP system</li>
-            <li>Developed, maintained, and analyzed financial statements for month end closing/li>
+            <li>Developed, maintained, and analyzed financial statements for month end closing</li>
             <li>Persuaded customers to pay amounts due on credit accounts by telephone and email</li>
         </ul>
         <p>Tax Associate || Jim Daria & Associates || 01.18-4.19 </p>
