--- a/MyCV.html
+++ b/MyCV.html
@@ -3,12 +3,13 @@
 <head>
     
     <title>MyCV</title>
+    <link href="css/MyCV.css" rel="stylesheet">
 </head>
 <body>
 
     <div>
         <h3>Contact Info: </h3>
-        <p>Hung Dinh || 11324 Melissa Court || Cincinnati, OH 45251 || 859-391-8807 || dinhh23@gmail.com</p>
+        <p id="contact">Hung Dinh || 11324 Melissa Court || Cincinnati, OH 45251 || 859-391-8807 || dinhh23@gmail.com</p>
     </div>
 
     <div>
@@ -43,19 +44,19 @@
 
     <div>
         <h3>Work Experience:</h3>
-        <p>Accounting Assistant || Kiswel Inc || 04.19-4.20 </p>
+        <p class="underline">Accounting Assistant || Kiswel Inc || 04.19-4.20 </p>
         <ul>
             <li>Reviewed and recorded account payable invoices for payment into ERP system</li>
             <li>Developed, maintained, and analyzed financial statements for month end closing</li>
             <li>Persuaded customers to pay amounts due on credit accounts by telephone and email</li>
         </ul>
-        <p>Tax Associate || Jim Daria & Associates || 01.18-4.19 </p>
+        <p class="underline">Tax Associate || Jim Daria & Associates || 01.18-4.19 </p>
         <ul>
             <li>Prepared and assisted in preparing simple to complex tax returns for individuals or small businesses</li>
             <li>Checked data input to verify totals on forms, to detect errors in math, data entry, or procedures</li>
             <li>Computed taxes owed or overpaid, used adding machines or computers; completed entries on forms, following tax form instructions and tax tables</li>
         </ul>
-        <p>Customer Service Representative || Fifth Third Bank || 03.17-12.17 </p>
+        <p class="underline">Customer Service Representative || Fifth Third Bank || 03.17-12.17 </p>
         <ul>
             <li>Received checks / cash for deposit, verified amounts and checked accuracy of deposit slips</li>
             <li>Balanced currency, coin, and checks in cash drawers at end of shifts; calculated daily transactions</li>
@@ -64,8 +65,8 @@
     </div>
 
     <div>
-        <h3>Education</h3>
-        <p>MAX Technical Training || Java Coding Bootcamp || 12.20 </p>
+        <h3>Education:</h3>
+        <p class="springgreen bold">MAX Technical Training || Java Coding Bootcamp || 12.20 </p>
     </div>
 </body>
 </html>
