--- a/MyCV.html
+++ b/MyCV.html
@@ -4,6 +4,9 @@
     
     <title>MyCV</title>
     <link href="css/MyCV.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+        crossorigin="anonymous">
 </head>
 <body>
 
@@ -14,9 +17,9 @@
 
     <div>
         <h3>Technology List: </h3>
-        <table>
+        <table class="table table-sm">
             <tr>
-                <td>Java/.Net</td>
+                <td class="text-primary">Java/.Net</td>
                 <td>Eclipse</td>
                 <td>MySQL/SQL</td>
             </tr>       
@@ -68,5 +71,6 @@
         <h3>Education:</h3>
         <p class="springgreen bold">MAX Technical Training || Java Coding Bootcamp || 12.20 </p>
     </div>
+      
 </body>
 </html>
